Fixes style issue on mobile.

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,19 @@
 @reference "tailwindcss";
 
+@layer base {
+  html {
+    @apply bg-gray-100 dark:bg-zinc-900;
+  }
+
+  body {
+    @apply bg-gray-100 dark:bg-zinc-900 min-h-screen;
+  }
+
+  #__next {
+    @apply min-h-screen;
+  }
+}
+
 .base-color {
   @apply text-gray-700 dark:text-gray-400;
 }
